// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletsList should not render if isVisible is false 1`] = `<DocumentFragment />`;

exports[`WalletsList should render 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline"
                >
                  <div>
                    Wallet Address
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex justify-center align-top flex-inline"
                >
                  <div>
                    Wallet Type
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-row-reverse justify-end align-top flex-inline"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-row-reverse justify-end align-top flex-inline"
                >
                  <div>
                    Fiat Value
                  </div>
                  <div
                    class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fTgXGQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="flex-shrink-0 -space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  />
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fTgXGQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="flex-shrink-0 -space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 2
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-text"
                      data-testid="WalletIcon__Key"
                    >
                      <div
                        class="sc-bdfBwQ dHWxPT"
                        height="16"
                        width="1em"
                      >
                        <svg>
                          key.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render empty block 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      class="p-6 leading-5 text-center rounded-lg border border-solid border-theme-secondary-300 text-theme-secondary-text dark:border-theme-secondary-800"
      data-testid="EmptyBlock"
    >
      <div>
        You don't have any wallets yet.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render empty block for ledger display type 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      class="p-6 leading-5 text-center rounded-lg border border-solid border-theme-secondary-300 text-theme-secondary-text dark:border-theme-secondary-800"
      data-testid="EmptyBlock"
    >
      <div>
        You don't have any 
        <strong>
          Ledger
        </strong>
         wallets.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render empty block for starred display type 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      class="p-6 leading-5 text-center rounded-lg border border-solid border-theme-secondary-300 text-theme-secondary-text dark:border-theme-secondary-800"
      data-testid="EmptyBlock"
    >
      <div>
        You don't have any 
        <strong>
          Starred
        </strong>
         wallets.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render loading state 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline"
                >
                  <div>
                    Wallet Address
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex justify-center align-top flex-inline"
                >
                  <div>
                    Wallet Type
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-row-reverse justify-end align-top flex-inline"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-row-reverse justify-end align-top flex-inline"
                >
                  <div>
                    Fiat Value
                  </div>
                  <div
                    class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      class="flex items-center mr-2 -space-x-1"
                    >
                      <div
                        class="border-transparent Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
                      >
                        <span>
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 44px; height: 44px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                        </span>
                      </div>
                      <div
                        class="border-transparent Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
                      >
                        <span>
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 44px; height: 44px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 260px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 229px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      class="flex items-center mr-2 -space-x-1"
                    >
                      <div
                        class="border-transparent Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
                      >
                        <span>
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 44px; height: 44px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                        </span>
                      </div>
                      <div
                        class="border-transparent Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
                      >
                        <span>
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 44px; height: 44px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 260px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 229px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      class="flex items-center mr-2 -space-x-1"
                    >
                      <div
                        class="border-transparent Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
                      >
                        <span>
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 44px; height: 44px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                        </span>
                      </div>
                      <div
                        class="border-transparent Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
                      >
                        <span>
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 44px; height: 44px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 260px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 229px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 16px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render with view more button 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline"
                >
                  <div>
                    Wallet Address
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex justify-center align-top flex-inline"
                >
                  <div>
                    Wallet Type
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-row-reverse justify-end align-top flex-inline"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-row-reverse justify-end align-top flex-inline"
                >
                  <div>
                    Fiat Value
                  </div>
                  <div
                    class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fTgXGQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="flex-shrink-0 -space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  />
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fTgXGQ group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <div
                    class="flex-shrink-0 -space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ksomUO ring-theme-background dark:group-hover:ring-black dark:group-hover:bg-black group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="text-base font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 2
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-text"
                      data-testid="WalletIcon__Key"
                    >
                      <div
                        class="sc-bdfBwQ dHWxPT"
                        height="16"
                        width="1em"
                      >
                        <svg>
                          key.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <span
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB text-theme-secondary-400"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="mt-10 mb-5 w-full OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
        data-testid="WalletsList__ViewMore"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          View More
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
